--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -16,6 +16,9 @@ jobs:
       # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Checkout code
         uses: actions/checkout@v2
+      # Run make
+      - name: Eslint checking
+        run: make lint   
 
       # Runs the Super-Linter action
       - name: Run Super-Linter
