--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v2
       # Run make
       - name: Eslint checking
-        run: make lint   
+        run: |
+          make lint 
 
       # Runs the Super-Linter action
       - name: Run Super-Linter
