--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
   },
   "homepage": "https://github.com/AnnaBerk/frontend-project-lvl1#readme",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "readline-sync": "^1.4.10",
+    "typescript": "^4.1.5"
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3"
   }
 }
