--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,16 +1,21 @@
-name: Super-Linter
+# Name of workflow
+name: Node CI
 
-# Run this workflow every time a new commit pushed to your repository
-on: push
+# Trigger the workflow on push or pull request
+on:
+  - push
+  - pull_request
 
 jobs:
-  # Set the job key. The key is displayed as the job name
-  # when a job name is not provided
-  super-lint:
-    # Name the Job
-    name: Lint code base
-    # Set the type of machine to run on
+  build:
+
+    # The type of machine to run the job on
     runs-on: ubuntu-latest
+
+    strategy:
+      # Node versions list
+      matrix:
+        node-version: [14.x]
 
     steps:
         # Check-out repository under GitHub workspace
@@ -33,18 +38,15 @@ jobs:
           CI: true
       - name: Run linter
         # Run Linter
-      - uses: actions/checkout@master
-        with:
-          fetch-depth: 1
-      - name: Run Makefile
-        env:
-          TOKEN: ${{ secrets.TOKEN }}
         run: |
           make lint
-
-      # Runs the Super-Linter action
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
+      - name: Test & publish code coverage
+        # Publish code coverage on Code Climate
+        # https://github.com/paambaati/codeclimate-action
+        uses: paambaati/codeclimate-action@v2.7.4
+        # Add Code Climate secret key
         env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
