--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "git+https://github.com/AnnaBerk/frontend-project-lvl1.git"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/AnnaBerk/frontend-project-lvl1#readme",
   "dependencies": {
+    "@hexlet/pairs": "^1.1.1",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
