--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "src/bin/brain-even.js"
   },
   "author": "",
   "license": "ISC",
