--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "[![Actions Status](https://github.com/AnnaBerk/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/AnnaBerk/frontend-project-lvl1/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build",
+    "eslint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -15,7 +18,8 @@
     "brain-games": "bin/brain-games.js",
     "brain-even": "src/bin/brain-even.js",
     "brain-nod": "src/bin/brain-nod.js",
-    "brain-progression": "src/bin/brain-progression.js"
+    "brain-progression": "src/bin/brain-progression.js",
+    "brain-prime": "src/bin/brain-progression.js"
   },
   "author": "",
   "license": "ISC",
