--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build",
-    "eslint": "eslint"
+    "eslint": "eslint",
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "node src/bin/brain-even.js",
+    "brain-nod": "src/bin/brain-nod.js",
+    "brain-progression": "src/bin/brain-progression.js",
+    "brain-prime": "src/bin/brain-progression.js"
   },
   "repository": {
     "type": "git",
