--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "bin": {
     "brain-games": "src/bin/brain-games.js",
     "brain-even": "src/bin/brain-even.js",
+    "brain-calc": "src/bin/brain-calc.js",
     "brain-nod": "src/bin/brain-nod.js",
     "brain-progression": "src/bin/brain-progression.js",
     "brain-prime": "src/bin/brain-prime.js"
